--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,9 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Text-TabFile
-version:      1.10
-version_from: lib/Text/TabFile.pm
+version:      VERSIONTAG
+version_from: lib/Tkx/Login.pm
 installdirs:  site
 requires:
-    Text::Delimited:               2.00
+    Tkx:               1.00
 
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.21
